--- a/less/header_install.less
+++ b/less/header_install.less
@@ -38,7 +38,6 @@
 	}
 }
 .img{
-	background: url(../img/header_logo.png) no-repeat;
 	width: 116px;
 	height: 30px;
 	margin: 0 70*@width 0 30*@width;
@@ -59,9 +58,6 @@
 	}
 	p{
 		margin: 3.2% 560*@width 0 330*@width;
-		br{
-			display: none;
-		}
 	}
 	div{
 		display: flex;
@@ -149,7 +145,6 @@
 			width: 229px;
 			height: 57px;
 			margin: auto;
-			background: url(../img/logo_mob.png);
 		}
 	}
 	.install{
@@ -160,6 +155,7 @@
 			width: 75%;
 			margin-top: 70px;
 			margin-bottom: 94px;
+			line-height: 40px;
 		}
 		.price{
 			flex-direction: column;
@@ -172,6 +168,15 @@
 				height: 90px;
 				margin: 0 0 0 68*@width;
 				border-radius: 45px;
+			}
+		}
+	}
+}
+@media(min-width: 751px){
+.install{
+	p{
+		br{
+			display: none;
 			}
 		}
 	}
