--- a/css/background_header_footerAll.css
+++ b/css/background_header_footerAll.css
@@ -6,7 +6,6 @@
   width: 100%;
   padding: 35px 0 35px 0;
   margin: 0;
-  background: url('../img/header.png') no-repeat;
   background-size: cover;
   box-shadow: 0 3px 7px rgba(0, 0, 2, 0.25);
   z-index: 111;
@@ -17,7 +16,7 @@
   position: relative;
   height: 283px;
   padding: 0 0 0 0;
-  background: url('../img/footer.png') no-repeat;
+  background: #343c6d;
   box-shadow: none;
 }
 .footer .copyright {
@@ -33,7 +32,6 @@
   position: relative;
   width: 100%;
   height: 37px;
-  background: url(../img/footer_logo.png) no-repeat;
 }
 .footer .copyright p {
   display: inline-block;
@@ -67,7 +65,6 @@
   width: 30px;
   height: 30px;
   margin: 0;
-  background: url(../img/footer_phone.png) no-repeat;
   background-position: -2px -2px;
   border-radius: 50%;
 }
@@ -153,25 +150,21 @@
 .footer .time .social .socialItem-VK {
   width: 26px;
   height: 20px;
-  background: url(../img/vk.png) no-repeat;
   background-position: 0px 2px;
 }
 .footer .time .social .socialItem-Face {
   width: 13px;
   height: 20px;
-  background: url(../img/fc.png) no-repeat;
   background-position: 0px 0px;
 }
 .footer .time .social .socialItem-Twit {
   width: 22px;
   height: 20px;
-  background: url(../img/tw.png) no-repeat;
   background-position: 0px 0px;
 }
 .footer .time .social .socialItem-Skype {
   width: 20px;
   height: 20px;
-  background: url(../img/sk.png) no-repeat;
   background-position: 0px 0px;
 }
 .footer > div:last-child {
@@ -181,7 +174,6 @@
   height: 50px;
   margin-top: 225px;
   margin-right: 2.67857143%;
-  background: url(../img/footer_mes.png) no-repeat;
   background-position: -2px -2px;
   border-radius: 50%;
 }
