--- a/less/afterInst_services_mob.less
+++ b/less/afterInst_services_mob.less
@@ -6,6 +6,7 @@
 //=================================
 //		Styles .afterInst
 //=================================
+@media(max-width: 750px){
 .afterInst{
 	display: flex;
 	flex-direction: column;
@@ -16,6 +17,10 @@
 		margin: 0 0 0 68*@width;
 		line-height: 50px;
 		letter-spacing: 2.4px;
+	}
+	p{
+		line-height: 30px;
+		margin: 40px 0 30px 68*@width !important;
 	}
 	&>.p-font{
 		margin: 58px 0 0 68*@width;
@@ -33,14 +38,14 @@
 		width: 100%;
 		margin: 40px 0 0 0;
 		height: 100px;
+		padding: 0 !important;
 		div{
 			display: block;
 			position: relative;
 			width: 69px;
 			height: 69px;
 			padding: 0;
-			margin: 0 6% 0 68*@width;
-			background: url(../img/sprite.png) no-repeat;
+			margin: 0 2% 0 90*@width;
 			border-radius: 50%;
 			transform: scale(1.47826,1.47826);
 			top: 15px;
@@ -48,10 +53,20 @@
 		p{
 			display: inline-block;
 			position: relative;
-			margin: 35px 0 0 0;
-			height: 20px;
-			line-height: 18px;
+			margin-top: 0 !important;
+			padding-top: 20px;
+			height: 80px;
+			font-size: 21*@newF !important;
+			line-height: 30px;
 			font-size: 20*@newF;
+			width: 60%;
+			b{
+				margin-right: 3%
+			}
+		}
+		.afterInst--icon--p{
+			padding-top: 40px;
+			height: 60px;
 		}
 		.stage1{
 		width: 69px;
@@ -78,7 +93,7 @@
 		display: flex;
 		flex-direction: column;
 		width: 100%;
-		margin: 127px 0 0 0;
+		margin: 100px 0 0 0;
 		button{
 			width: 83%;
 			height: 90px;
@@ -149,7 +164,7 @@
 				height: 39px;
 				transform: scale(1.71794,1.71794);
 				background: url(../img/sprite.svg) no-repeat;
-				margin: 0 5.6% 0 9%;
+				margin: 0 5.6% 0 11%;
 				border-radius: 50%;
 				top: 15px;
 			}
@@ -190,7 +205,7 @@
 		height: 231px;
 		&>div{
 			div{
-				margin: 0 4% 0 9%;
+				margin: 0 4% 0 11%;
 			}
 				._3col-mob{
 					background-position: -120px -10px;
@@ -224,7 +239,7 @@
 	position: relative;
 	height: 166px;
 	padding: 0 0 0 0;
-	background: url('../img/footer.png') no-repeat;
+	background: #343c6d;
 	box-shadow: none;
 	.copyright{
 		display: flex;
@@ -238,7 +253,6 @@
 			position: relative;
 			width: 18px;
 			height: 20;
-			background: url(../img/copyright.png) no-repeat;
 			top: 20px;
 			left: 2px;
 		}
@@ -268,4 +282,5 @@
 	&>div:last-child{
 		display: none;
 	}
+}
 }
