--- a/less/background_header_footerAll.less
+++ b/less/background_header_footerAll.less
@@ -14,7 +14,6 @@
 	width: 100%;
 	padding: 35px 0 35px 0;
 	margin: 0;
-	background: url('../img/header.png') no-repeat;
 	background-size: cover;
 	box-shadow: 0 3px 7px rgba(0,0,2,0.25);
 	z-index: 111;
@@ -25,7 +24,7 @@
 	position: relative;
 	height: 283px;
 	padding: 0 0 0 0;
-	background: url('../img/footer.png') no-repeat;
+	background: #343c6d;
 	box-shadow: none;
 	.copyright{
 		display: flex;
@@ -39,7 +38,6 @@
 			position: relative;
 			width: 100%;
 			height: 37px;
-			background: url(../img/footer_logo.png) no-repeat;
 		}
 		p{
 			display: inline-block;
@@ -74,7 +72,6 @@
 				width: 30px;
 				height: 30px;
 				margin: 0;
-				background: url(../img/footer_phone.png) no-repeat;
 				background-position: -2px -2px;
 				border-radius: 50%;
 			}
@@ -158,25 +155,21 @@
 			.socialItem-VK{
 				width: 26px;
 				height: 20px;
-				background: url(../img/vk.png) no-repeat;
 				background-position: 0px 2px;
 			}
 			.socialItem-Face{
 				width: 13px;
 				height: 20px;
-				background: url(../img/fc.png) no-repeat;
 				background-position: 0px 0px;
 			}
 			.socialItem-Twit{
 				width: 22px;
 				height: 20px;
-				background: url(../img/tw.png) no-repeat;
 				background-position: 0px 0px;
 			}
 			.socialItem-Skype{
 				width: 20px;
 				height: 20px;
-				background: url(../img/sk.png) no-repeat;
 				background-position: 0px 0px;
 			}
 		}
@@ -188,7 +181,6 @@
 		height: 50px;
 		margin-top: 225px;
 		margin-right: 45*@width;
-		background: url(../img/footer_mes.png) no-repeat;
 		background-position: -2px -2px;
 		border-radius: 50%;
 	}
