--- a/css/header_install.css
+++ b/css/header_install.css
@@ -196,7 +196,7 @@
   }
   .install .price button,
   .install .price button:last-child {
-    width: 624px;
+    width: 82.5%;
     height: 90px;
     margin: 0 0 0 9.06666667%;
     border-radius: 45px;
