--- a/less/header_install.less
+++ b/less/header_install.less
@@ -164,7 +164,7 @@
 			margin-bottom: 77px;
 			button,
 			button:last-child{
-				width: 624px;
+				width: 82.5%;
 				height: 90px;
 				margin: 0 0 0 68*@width;
 				border-radius: 45px;
