--- a/less/header_install.less
+++ b/less/header_install.less
@@ -92,11 +92,11 @@
 		.gamb{
 			display: flex;
 			flex-direction: column;
-			position: absolute;
+			position: relative;
 			justify-content: space-between;
 			width: 43px;
 			height: 45px;
-			margin: 52.5px 0 0 60px;
+			margin: 52.5px 1% 0 8%;
 			span{
 				width: 100%;
 				height: 5px;
